--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
 }
 
 .menu-container {
+  display: flex;
+  justify-content: center;
   color: white;
   background-color: lightblue;
   padding: 20px 0;
