--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,12 @@
   align-items: center;
 }
 
+.social,
+.subscribe {
+  align-self: flex-end;
+  margin-bottom: 20px;
+}
+
 .photo-grid-container {
   display: flex;
   justify-content: center;
@@ -52,10 +58,19 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  align-items: center;
 }
 
 .photo-grid-item {
   border: 1px solid white;
   width: 300px;
   height: 300px;
+}
+
+.first-item {
+  order: 1;
+}
+
+.last-item {
+  order: -1;
 }
