--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   color: white;
-  background-color: cornflowerblue;
+  background-color: steelblue;
   padding: 20px 0;
 }
 
@@ -18,9 +18,8 @@
   width: 900px;
 }
 
-.links {
-  display: flex;
-  justify-content: flex-end;
+.signup {
+  margin-left: auto;
 }
 
 .login {
@@ -28,7 +27,7 @@
 }
 
 .header-container {
-  color: cornflowerblue;
+  color: steelblue;
   background-color: lightsteelblue;
   display: flex;
   justify-content: center;
@@ -73,4 +72,23 @@
 
 .last-item {
   order: -1;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-item {
+  border: 1px solid white;
+  background-color: lightsteelblue;
+  height: 200px;
+  flex: 1;
+}
+
+.footer-one,
+.footer-three {
+  background-color: steelblue;
+  flex: initial;
+  width: 300px;
 }
